Added main html and grid to base design file

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <title>hers | Webshop</title>
   </head>
   <body>
+    <div class="gridWrapper">
+      <main class="landingpageContainer">landingpageContainer</main>
+      <section class="productsContainer">productsContainer</section>
+      <section class="mediaBannerContainer">mediaBannerContainer</section>
+      <aside class="newsContainer">newsContainer</aside>
+      <footer class="footerContainer">footerContainer</footer>
+    </div>
     <script
       src="https://kit.fontawesome.com/8b4585210b.js"
       crossorigin="anonymous"
