Added landingpage content and elements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,41 @@
   </head>
   <body>
     <div class="gridWrapper">
-      <main class="landingpageContainer">landingpageContainer</main>
+      <main class="landingpageContainer">
+        <nav class="navbar">
+          <picture class="landingpageLogo">
+            <a href="#"> <img src="" alt="hers logo" /></a>
+          </picture>
+          <ul class="iconsBox">
+            <li class="iconHeart">
+              <a href="#"><i class="far fa-heart"></i></a>
+            </li>
+            <li class="iconCart">
+              <a href="#"><i class="fas fa-shopping-basket"></i></a>
+            </li>
+            <li class="menuBtn">
+              <a href="#"><i class="fas fa-bars"></i></a>
+            </li>
+            <li class="logInBtn" style="display: none">
+              <a href="#">Log in</a>
+            </li>
+          </ul>
+          <ul class="navbarMenu" style="display: none">
+            <li class="navbarMenuOptions"><a href="#">Home</a></li>
+            <li class="navbarMenuOptions"><a href="#">Skincare</a></li>
+            <li class="navbarMenuOptions"><a href="#">Our story</a></li>
+            <li class="navbarMenuOptions"><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <section class="landingpageTextBox">
+          <h1 class="landingpageHeader">Bring nature into your home</h1>
+          <h4 class="landingpageSubheader">
+            Products for you and your home. Inspired by nature, well being and
+            sustainability.
+          </h4>
+          <button class="landingpageBtn">Discover</button>
+        </section>
+      </main>
       <section class="productsContainer">productsContainer</section>
       <section class="mediaBannerContainer">mediaBannerContainer</section>
       <aside class="newsContainer">newsContainer</aside>
