Added elements for products and media banner

--- a/index.html
+++ b/index.html
@@ -51,8 +51,33 @@
           <button class="landingpageBtn">Discover</button>
         </section>
       </main>
-      <section class="productsContainer">productsContainer</section>
-      <section class="mediaBannerContainer">mediaBannerContainer</section>
+      <section class="productsContainer">
+        <header class="productsHeader">
+          <h2 class="productsHeader">Our Bestsellers</h2>
+        </header>
+        <main class="productBox">
+          <div class="nav-arrow">-></div>
+          <picture class="productImg">img</picture>
+          <p class="productName">Sponge</p>
+          <p class="productPrice">9.99 $</p>
+        </main>
+      </section>
+      <article class="mediaBannerContainer">
+        <main class="mediaBannerWrapper">
+          <header class="mediaBannerTextBox">
+            <p class="mediaBannerHeader">
+              Organic lip balm for your winter lips
+            </p>
+            <p class="mediaBannerText" style="display: none">
+              Choose from several different scents and find your favorite
+            </p>
+            <button class="mediaBannerBtn">Show me</button>
+          </header>
+          <section class="mediaBannerImg">
+            <img src="" alt="hands holding products" />
+          </section>
+        </main>
+      </article>
       <aside class="newsContainer">newsContainer</aside>
       <footer class="footerContainer">footerContainer</footer>
     </div>
