Added newselements and content

--- a/index.html
+++ b/index.html
@@ -55,11 +55,31 @@
         <header class="productsHeader">
           <h2 class="productsHeader">Our Bestsellers</h2>
         </header>
-        <main class="productBox">
-          <div class="nav-arrow">-></div>
-          <picture class="productImg">img</picture>
-          <p class="productName">Sponge</p>
-          <p class="productPrice">9.99 $</p>
+        <main class="productsWrapper">
+          <section class="productBox">
+            <div class="nav-arrow">-></div>
+            <picture class="productImg">img</picture>
+            <p class="productName">Sponge</p>
+            <p class="productPrice">9.99 $</p>
+          </section>
+          <section class="productBox">
+            <div class="nav-arrow">-></div>
+            <picture class="productImg">img</picture>
+            <p class="productName">Sponge</p>
+            <p class="productPrice">9.99 $</p>
+          </section>
+          <section class="productBox">
+            <div class="nav-arrow">-></div>
+            <picture class="productImg">img</picture>
+            <p class="productName">Sponge</p>
+            <p class="productPrice">9.99 $</p>
+          </section>
+          <section class="productBox">
+            <div class="nav-arrow">-></div>
+            <picture class="productImg">img</picture>
+            <p class="productName">Sponge</p>
+            <p class="productPrice">9.99 $</p>
+          </section>
         </main>
       </section>
       <article class="mediaBannerContainer">
@@ -74,11 +94,33 @@
             <button class="mediaBannerBtn">Show me</button>
           </header>
           <section class="mediaBannerImg">
-            <img src="" alt="hands holding products" />
+            <img class="mediaImg" src="" alt="hands holding products" />
           </section>
         </main>
       </article>
-      <aside class="newsContainer">newsContainer</aside>
+      <aside class="newsContainer">
+        <header class="newsTextBox">
+          <h3 class="newsHeader">
+            <span class="newAltHeader">News!</span> We are expanding with more
+            interior that give peace to your home.
+          </h3>
+          <p class="newsText">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+            et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+            Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+            sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+            et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+            accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
+            no sea takimata sanctus est Lorem ipsum dolor sit amet.
+          </p>
+        </header>
+        <main class="newsImgWrapper">
+          <img class="newsImg" src="" alt="buddha" />
+          <img class="newsImg" src="" alt="marmor" style="display: none" />
+        </main>
+      </aside>
       <footer class="footerContainer">footerContainer</footer>
     </div>
     <script
