--- a/index.html
+++ b/index.html
@@ -121,7 +121,46 @@
           <img class="newsImg" src="" alt="marmor" style="display: none" />
         </main>
       </aside>
-      <footer class="footerContainer">footerContainer</footer>
+      <footer class="footerContainer">
+        <picture class="footerLogo">
+          <a href="#"> <img src="" alt="hers logo" /></a>
+        </picture>
+        <main class="footerMenuColumnsWrapper">
+          <section class="footerMenuColumn">
+            <p class="footerMenuCategorie">About</p>
+            <ul class="footerMenuOptions">
+              <li class="footerMenuOption">Careers</li>
+              <li class="footerMenuOption">Stockicks</li>
+              <li class="footerMenuOption">Shoplocator</li>
+              <li class="footerMenuOption">Contact</li>
+            </ul>
+          </section>
+          <section class="footerMenuColumn">
+            <p class="footerMenuCategorie">Help</p>
+            <ul class="footerMenuOptions">
+              <li class="footerMenuOption">Shipping & Returns</li>
+              <li class="footerMenuOption">Track orders</li>
+              <li class="footerMenuOption">FAQ</li>
+              <li class="footerMenuOption">Terms & Conditions</li>
+              <li class="footerMenuOption">Privacy Policy</li>
+            </ul>
+          </section>
+        </main>
+        <aside class="footerSubscribewrapper">
+          <section class="footerSubscribe">
+            <h5 class="subscribeHeader">
+              Want to know all our secrets? Subscribe to our newsletter.
+            </h5>
+            <input type="email" name="" id="" placeholder="you@example.com" />
+            <input type="button" value="Subscribe" />
+          </section>
+          <section class="footerSoMeLinks">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter-square"></i>
+          </section>
+        </aside>
+      </footer>
     </div>
     <script
       src="https://kit.fontawesome.com/8b4585210b.js"
