Changed some structure elements in footer

--- a/index.html
+++ b/index.html
@@ -154,11 +154,17 @@
             <input type="email" name="" id="" placeholder="you@example.com" />
             <input type="button" value="Subscribe" />
           </section>
-          <section class="footerSoMeLinks">
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-twitter-square"></i>
-          </section>
+          <ul class="footerSoMeLinks">
+            <li class="iconInstagram">
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li class="iconFacebook">
+              <a href="#"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li class="iconTwitter">
+              <a href="#"><i class="fab fa-twitter-square"></i></a>
+            </li>
+          </ul>
         </aside>
       </footer>
     </div>
