Added main styling to landingpage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <main class="landingpageContainer">
         <nav class="navbar">
           <picture class="landingpageLogo">
-            <a href="#"> <img src="" alt="hers logo" /></a>
+            <a href="#">hers.</a>
           </picture>
           <ul class="iconsBox">
             <li class="iconHeart">
