Edited img i PS and added to project

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <main class="landingpageContainer">
         <nav class="navbar">
           <picture class="landingpageLogo">
-            <a href="#">hers.</a>
+            <a href="#"
+              ><img class="navLogo" src="/imgs/hers..png" alt="hers logo"
+            /></a>
           </picture>
           <ul class="iconsBox">
             <li class="iconHeart">
