Changed filename on logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar">
           <picture class="landingpageLogo">
             <a href="#"
-              ><img class="navLogo" src="/imgs/hers..png" alt="hers logo"
+              ><img class="navLogo" src="/imgs/hers.png" alt="hers logo"
             /></a>
           </picture>
           <ul class="iconsBox">
