Added img to banner and changed some styles to % instead of px

--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
               <a href="#"><i class="far fa-heart"></i></a>
             </li>
             <li class="iconCart">
-              <a href="#"><i class="fas fa-shopping-basket"></i></a>
+              <a href="#"><svg class="fa-shopping-basket" id="Icon_ionic-ios-basket" data-name="Icon ionic-ios-basket" xmlns="http://www.w3.org/2000/svg" width="27.59" height="23.647" viewBox="0 0 27.59 23.647">
+                <path id="Path_1" data-name="Path 1" d="M27.274,25.617H30.3l1.078-4.643H27.274Z" transform="translate(-5.357 -6.546)" fill="#333"/>
+                <path id="Path_2" data-name="Path 2" d="M27.274,31.016h.031A2.444,2.444,0,0,0,29.664,29.2l.369-1.595H27.274Z" transform="translate(-5.357 -7.369)" fill="#333"/>
+                <path id="Path_3" data-name="Path 3" d="M18.661,27.6h6.386v3.418H18.661Z" transform="translate(-4.287 -7.368)" fill="#333"/>
+                <path id="Path_4" data-name="Path 4" d="M5.121,25.617H8.138V20.974h-4.1Z" transform="translate(-2.472 -6.546)" fill="#333"/>
+                <path id="Path_5" data-name="Path 5" d="M10.048,13.5h6.386v5.388H10.048Z" transform="translate(-3.218 -5.618)" fill="#333"/>
+                <path id="Path_6" data-name="Path 6" d="M18.661,13.5h6.386v5.388H18.661Z" transform="translate(-4.287 -5.618)" fill="#333"/>
+                <path id="Path_7" data-name="Path 7" d="M5.958,29.186A2.43,2.43,0,0,0,8.3,31.015h.031V27.6H5.583Z" transform="translate(-2.663 -7.368)" fill="#333"/>
+                <path id="Path_8" data-name="Path 8" d="M10.048,27.6h6.386v3.418H10.048Z" transform="translate(-3.218 -7.368)" fill="#333"/>
+                <path id="Path_9" data-name="Path 9" d="M18.661,20.974h6.386v4.643H18.661Z" transform="translate(-4.287 -6.546)" fill="#333"/>
+                <path id="Path_10" data-name="Path 10" d="M10.048,20.974h6.386v4.643H10.048Z" transform="translate(-3.218 -6.546)" fill="#333"/>
+                <path id="Path_11" data-name="Path 11" d="M28.853,12.382H25.9V6.471A1.976,1.976,0,0,0,23.933,4.5H8.155A1.976,1.976,0,0,0,6.185,6.471v5.912H3.235a.986.986,0,0,0-.961,1.207l1.213,4.181H7.915V7.086a.865.865,0,0,1,.862-.862H23.311a.865.865,0,0,1,.862.862V17.771h4.434l1.207-4.181A.986.986,0,0,0,28.853,12.382Z" transform="translate(-2.249 -4.5)" fill="#333"/>
+              </svg>
+              </i></a>
             </li>
             <li class="menuBtn">
               <a href="#"><i class="fas fa-bars"></i></a>
@@ -104,7 +117,7 @@
       </section>
       <article class="mediaBannerContainer">
         <main class="mediaBannerWrapper">
-          <header class="mediaBannerTextBox">
+          <section class="mediaBannerTextBox">
             <p class="mediaBannerHeader">
               Organic lip balm for your winter lips
             </p>
@@ -112,9 +125,6 @@
               Choose from several different scents and find your favorite
             </p>
             <button class="mediaBannerBtn">Show me</button>
-          </header>
-          <section class="mediaBannerImg">
-            <img class="mediaImg" src="" alt="hands holding products" />
           </section>
         </main>
       </article>
