Styled news container

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <aside class="newsContainer">
         <header class="newsTextBox">
           <h3 class="newsHeader">
-            <span class="newAltHeader">News!</span> We are expanding with more
+            <span class="newsAltHeader">News!</span> We are expanding with more
             interior that give peace to your home.
           </h3>
           <p class="newsText">
@@ -147,8 +147,8 @@
           </p>
         </header>
         <main class="newsImgWrapper">
-          <img class="newsImg" src="" alt="buddha" />
-          <img class="newsImg" src="" alt="marmor" style="display: none" />
+          <img class="newsImg" src="/imgs/buddhasmall.jpg" alt="buddha" />
+          <img class="newsImg desktopNewsImg" src="/imgs/backgroundsmall.jpg" alt="marmor" style="display: none" />
         </main>
       </aside>
       <footer class="footerContainer">
