Added footer styling

--- a/index.html
+++ b/index.html
@@ -153,7 +153,10 @@
       </aside>
       <footer class="footerContainer">
         <picture class="footerLogo">
-          <a href="#"> <img src="" alt="hers logo" /></a>
+          <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="120" height="76" viewBox="0 0 120 76">
+            <text id="FOOTER-LOGO" transform="translate(60 62)" fill="#fff" font-size="57" font-family="SegoeUI, Segoe UI"><tspan x="-59.213" y="0">hers.</tspan></text>
+          </svg>
+          </a>
         </picture>
         <main class="footerMenuColumnsWrapper">
           <section class="footerMenuColumn">
@@ -176,22 +179,24 @@
             </ul>
           </section>
         </main>
-        <aside class="footerSubscribewrapper">
+        <aside class="footerSubscribeWrapper">
           <section class="footerSubscribe">
             <h5 class="subscribeHeader">
               Want to know all our secrets? Subscribe to our newsletter.
             </h5>
-            <input type="email" name="" id="" placeholder="you@example.com" />
-            <input type="button" value="Subscribe" />
+            <form class="subscribeRegister" action="">
+            <input class="subscribeInput" type="email" name="" id="register" placeholder="you@example.com" />
+            <input class="subscribeBtn" type="button" value="Subscribe" />
+            </form>
           </section>
           <ul class="footerSoMeLinks">
-            <li class="iconInstagram">
+            <li class="soMeIcon">
               <a href="#"><i class="fab fa-instagram"></i></a>
             </li>
-            <li class="iconFacebook">
+            <li class="soMeIcon">
               <a href="#"><i class="fab fa-facebook"></i></a>
             </li>
-            <li class="iconTwitter">
+            <li class="soMeIcon">
               <a href="#"><i class="fab fa-twitter-square"></i></a>
             </li>
           </ul>
