--- a/index.html
+++ b/index.html
@@ -153,9 +153,7 @@
       </aside>
       <footer class="footerContainer">
         <picture class="footerLogo">
-          <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="120" height="76" viewBox="0 0 120 76">
-            <text id="FOOTER-LOGO" transform="translate(60 62)" fill="#fff" font-size="57" font-family="SegoeUI, Segoe UI"><tspan x="-59.213" y="0">hers.</tspan></text>
-          </svg>
+          <a href="#"><img src="/imgs/footerLogo.png" alt="footerLogo">
           </a>
         </picture>
         <main class="footerMenuColumnsWrapper">
