--- a/index.html
+++ b/index.html
@@ -17,12 +17,19 @@
   <body>
     <div class="gridWrapper">
       <main class="landingpageContainer">
+        <div class="navWrapper" id="navBar">
         <nav class="navbar">
           <picture class="landingpageLogo">
             <a href="#"
               ><img class="navLogo" src="/imgs/hers.png" alt="hers logo"
             /></a>
           </picture>
+          <ul class="navbarMenu">
+            <li class="navbarMenuOptions"><a href="#" class="menuText">Home</a></li>
+            <li class="navbarMenuOptions"><a href="#" class="menuText">Skincare</a></li>
+            <li class="navbarMenuOptions"><a href="#" class="menuText">Our story</a></li>
+            <li class="navbarMenuOptions"><a href="#" class="menuText">Contact</a></li>
+          </ul>
           <ul class="iconsBox">
             <li class="iconHeart">
               <a href="#"><i class="far fa-heart"></i></a>
@@ -46,17 +53,12 @@
             <li class="menuBtn">
               <a href="#"><i class="fas fa-bars"></i></a>
             </li>
-            <li class="logInBtn" style="display: none">
-              <a href="#">Log in</a>
+            <li class="logInBtn">
+              <a href="#" class="logInText">Log in</a>
             </li>
           </ul>
-          <ul class="navbarMenu" style="display: none">
-            <li class="navbarMenuOptions"><a href="#">Home</a></li>
-            <li class="navbarMenuOptions"><a href="#">Skincare</a></li>
-            <li class="navbarMenuOptions"><a href="#">Our story</a></li>
-            <li class="navbarMenuOptions"><a href="#">Contact</a></li>
-          </ul>
         </nav>
+        </div>
         <section class="landingpageTextBox">
           <h1 class="landingpageHeader">Bring nature into your home</h1>
           <h4 class="landingpageSubheader">
