Played with products arrow

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h2 class="productsHeader">Our Bestsellers</h2>
         </header>
         <main class="productsWrapper">
-          <div class="nav-arrow">
+          <div class="navArrow">
             <svg
               class="svg"
               xmlns="http://www.w3.org/2000/svg"
