Styled mediabanner for tablet

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <p class="mediaBannerHeader">
               Organic lip balm for your winter lips
             </p>
-            <p class="mediaBannerText" style="display: none">
+            <p class="mediaBannerText">
               Choose from several different scents and find your favorite
             </p>
             <button class="mediaBannerBtn">Show me</button>
