:sparkles:Tablet view done!

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </header>
         <main class="newsImgWrapper">
           <img class="newsImg" src="/imgs/buddhasmall.jpg" alt="buddha" />
-          <img class="newsImg desktopNewsImg" src="/imgs/backgroundsmall.jpg" alt="marmor" style="display: none" />
+          <img class="newsImg desktopNewsImg" src="/imgs/backgroundsmall.jpg" alt="marmor" />
         </main>
       </aside>
       <footer class="footerContainer">
