:sparkles: Added menu view mobile

--- a/index.html
+++ b/index.html
@@ -51,15 +51,18 @@
               </i></a>
             </li>
             <li class="menuBtn">
-              <a href="#">
-                <svg class="fas fa-bars" xmlns="http://www.w3.org/2000/svg" width="32.407" height="23.408" viewBox="0 0 32.407 23.408">
-                  <g id="BURGER-MENU" transform="translate(-337.47 -25.267)">
-                    <line id="Line_1" data-name="Line 1" x2="28.407" transform="translate(339.47 27.267)" fill="none" stroke="#f6785f" stroke-linecap="round" stroke-width="4"/>
-                    <line id="Line_2" data-name="Line 2" x2="28.407" transform="translate(339.47 36.971)" fill="none" stroke="#f6785f" stroke-linecap="round" stroke-width="4"/>
-                    <line id="Line_3" data-name="Line 3" x2="28.407" transform="translate(339.47 46.675)" fill="none" stroke="#f6785f" stroke-linecap="round" stroke-width="4"/>
-                  </g>
-                </svg>
-                </a>
+              <div class="btnToggle">
+                <input class="checkbox" type="checkbox" />
+                <span class="lines"></span>
+                <span class="lines"></span>
+                <span class="lines"></span>
+                <ul class="insideMenu">
+                  <li class="menuTitle"><a href="#">Home</a></li>
+                  <li class="menuTitle"><a href="#">Skincare</a></li>
+                  <li class="menuTitle"><a href="#">Our story</a></li>
+                  <li class="menuTitle"><a href="#">Contact</a></li>
+                </ul>
+                </div>
             </li>
             <li class="logInBtn">
               <a href="#" class="logInText">Log in</a>
