:bug: Fixed all img urls and removed some left over styling

--- a/index.html
+++ b/index.html
@@ -103,26 +103,26 @@
             </svg>
           </div>
           <section class="productBox">
-            <img class="productImg" src="/imgs/spongesmall.jpg" alt="sponge" />
+            <img class="productImg" src="imgs/spongesmall.jpg" alt="sponge" />
             <p class="productName">Sponge</p>
             <p class="productPrice">9.99 $</p>
           </section>
           <section class="productBox">
-            <img class="productImg" src="/imgs/soapsmall.jpg" alt="handsoap" />
+            <img class="productImg" src="imgs/soapsmall.jpg" alt="handsoap" />
             <p class="productName">Handsoap</p>
             <p class="productPrice">5.99 $</p>
           </section>
           <section class="productBox">
             <img
               class="productImg"
-              src="/imgs/selfcarekitsmall.jpg"
+              src="imgs/selfcarekitsmall.jpg"
               alt="selfcarekit"
             />
             <p class="productName">Selfcare kit</p>
             <p class="productPrice">19.99 $</p>
           </section>
           <section class="productBox">
-            <img class="productImg" src="/imgs/spongesmall.jpg" alt="sponge" />
+            <img class="productImg" src="imgs/spongesmall.jpg" alt="sponge" />
             <p class="productName">Toothbrush</p>
             <p class="productPrice">7.99 $</p>
           </section>
@@ -160,8 +160,8 @@
           </p>
         </header>
         <main class="newsImgWrapper">
-          <img class="newsImg" src="/imgs/buddhasmall.jpg" alt="buddha" />
-          <img class="newsImg desktopNewsImg" src="/imgs/backgroundsmall.jpg" alt="marmor" />
+          <img class="newsImg" src="imgs/buddhasmall.jpg" alt="buddha" />
+          <img class="newsImg desktopNewsImg" src="imgs/backgroundsmall.jpg" alt="marmor" />
         </main>
       </aside>
       <footer class="footerContainer">
