--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="All you need in selfcare">
+    <meta property="og:title" content= "Shop the latest news in selfcare">
+    <meta property="description" content="The best website for shoppers who like selfcare ">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Playfair+Display&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Playfair+Display&display=swap"
       rel="stylesheet"
     />
-    
     <title>hers | Webshop</title>
+    
   </head>
   <body>
     <div class="gridWrapper">
