Testing meta properties

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content= "Shop the latest news in selfcare">
     <meta property="description" content="The best website for shoppers who like selfcare ">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="imgs/selfcarekitsmall.jpg">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="imgs/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
