--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <p class="productPrice">19.99 $</p>
           </section>
           <section class="productBox">
-            <img class="productImg" src="imgs/spongesmall.jpg" alt="sponge" />
+            <img class="productImg" src="imgs/toothbrush.jpg" alt="sponge" />
             <p class="productName">Toothbrush</p>
             <p class="productPrice">7.99 $</p>
           </section>
