Compressed imgs for web

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <p class="productPrice">9.99 $</p>
           </section>
           <section class="productBox">
-            <img class="productImg" src="imgs/soapsmall.jpg" alt="handsoap" />
+            <img class="productImg" src="imgs/soap.jpg" alt="handsoap" />
             <p class="productName">Handsoap</p>
             <p class="productPrice">5.99 $</p>
           </section>
