Added some alt texts

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           </ul>
           <ul class="iconsBox">
             <li class="iconHeart">
-              <a href="#"><i class="far fa-heart" alt="likeIcon"></i></a>
+              <a href="#" alt="heart´icon"><i class="far fa-heart" alt="heart icon"></i></a>
             </li>
             <li class="iconCart">
-              <a href="#"><svg class="fa-shopping-basket" alt="cartIcon" id="Icon_ionic-ios-basket" data-name="Icon ionic-ios-basket" xmlns="http://www.w3.org/2000/svg" width="27.59" height="23.647" viewBox="0 0 27.59 23.647">
+              <a href="#" alt="cart icon"><svg class="fa-shopping-basket" alt="cartIcon" id="Icon_ionic-ios-basket" data-name="Icon ionic-ios-basket" xmlns="http://www.w3.org/2000/svg" width="27.59" height="23.647" viewBox="0 0 27.59 23.647">
                 <path id="Path_1" data-name="Path 1" d="M27.274,25.617H30.3l1.078-4.643H27.274Z" transform="translate(-5.357 -6.546)" fill="#333"/>
                 <path id="Path_2" data-name="Path 2" d="M27.274,31.016h.031A2.444,2.444,0,0,0,29.664,29.2l.369-1.595H27.274Z" transform="translate(-5.357 -7.369)" fill="#333"/>
                 <path id="Path_3" data-name="Path 3" d="M18.661,27.6h6.386v3.418H18.661Z" transform="translate(-4.287 -7.368)" fill="#333"/>
